--- a/src/global.css
+++ b/src/global.css
@@ -10,7 +10,9 @@
 }
 
 /* 전역 폰트 설정 */
-html, button, input {
+html,
+button,
+input {
   font-size: 10px;
   font-family: SpoqaHanSansNeo, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
